--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
     },
     "require": {
         "php"            : ">=7.1",
-        "hoa/compiler"   : "~3.0",
+        "hoa/compiler"   : "dev-master",
         "hoa/consistency": "~1.0",
         "hoa/exception"  : "~1.0",
-        "hoa/iterator"   : "~2.0",
-        "hoa/protocol"   : "~1.0",
+        "hoa/iterator"   : "dev-master",
+        "hoa/protocol"   : "dev-master",
         "hoa/zformat"    : "~1.0"
     },
     "require-dev": {
