--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require": {
         "php"            : ">=7.1",
         "hoa/compiler"   : "dev-master",
-        "hoa/consistency": "~1.0",
+        "hoa/consistency": "dev-master",
         "hoa/exception"  : "dev-master",
         "hoa/iterator"   : "dev-master",
         "hoa/protocol"   : "dev-master",
